# outdoor_aerial_server_python

./: .gitignore  AGENTS.md  LICENSE.md  README.md  main.py  pyproject.toml  webtransport_audio.html
.github/: dependabot.yaml
doc/: ARCHITECTURE.md  FEATURE.md  RESTRICTION.md
handler/: broadcast.py
router/: broadcast.py
service/broadcast/: broadcast.py
service/capture/: __init__.py  dataclass.py  service.py
service/connection/: __init__.py  app.py  dataclass.py  enum.py  handler.py  protocol.py  router.py  session.py  type.py
service/connection/interface/: dataclass.py
service/controller/: __init__.py  fetch.py
service/controller/interface/: dataclass.py
service/database/: __init__.py
service/plugin/: __init__.py  registry.py
service/plugin/interface/: dataclass.py
service/plugin/model/: database.py  robot.py
service/repository/: __init__.py
service/robot/: __init__.py
service/workflow/: service.py
src/broadcast/: __init__.py  service.py
test/: test_fetch_playback.py  test_https_server.py
test/web/: index.html
