[project]
name = "outdoor-aerial-server-quic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyaudio>=0.2.14",
    "pywebtransport>=0.8.1",
    "rich>=14.3.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
