[project]
name = "outdoor-aerial-server-quic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioquic>=1.3.0",
    "pyfiglet>=1.0.4",
    "rich>=14.3.0",
    "sounddevice>=0.5.5",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
